--- a/dobble-2/index.html
+++ b/dobble-2/index.html
@@ -13,7 +13,7 @@
     <title>Titan Web Marketing Solutions</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="web-fonts-with-css/css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="css/fontawesome-all.min.css">
     <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
