--- a/dobble-2/Photos.html
+++ b/dobble-2/Photos.html
@@ -13,7 +13,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet">
+    <link href="css/fontawesome-all.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/ekko-lightbox.css" rel="stylesheet">
 
