--- a/digital_agency/index.html
+++ b/digital_agency/index.html
@@ -21,6 +21,7 @@
     <!-- begin navbar -->
     <nav class="navbar navbar-custom navbar-fixed-top">
       <div class="container">
+
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <i class="fas fa-align-justify fa-2x"></i>
@@ -31,6 +32,7 @@
           </button>
           <a class="navbar-brand em-text" href="index.html">Digital Agency</a>
         </div>
+
         <div id="navbar" class="collapse navbar-collapse navbar-right navbar-main-collapse">
           <ul class="nav navbar-nav">
             <li class="hidden">
@@ -170,12 +172,11 @@
     <section id="clients" class="content-section text-center">
       <div class="container">
         <h2>Our Clients</h2>
-        <img src="img/partner1.png" alt="">
-        <img src="img/partner2.png" alt="">
-        <img src="img/partner3.png" alt="">
-        <img src="img/partner4.png" alt="">
-        <img src="img/partner5.png" alt="">
-        <img src="img/partner6.png" alt="">
+        <img src="img/partner1.png" alt="" class="img-clients">
+        <img src="img/partner2.png" alt="" class="img-clients">
+        <img src="img/partner3.png" alt="" class="img-clients">
+        <img src="img/partner4.png" alt="" class="img-clients">
+        <img src="img/partner5.png" alt="" class="img-clients">
       </div>
     </section> <!-- end clients -->
 
