--- a/dobble-2/Photos.html
+++ b/dobble-2/Photos.html
@@ -69,14 +69,12 @@
           <div class="col-md-8">
             <h1 class="page-header">Photos</h1>
             <div class="photos gallery-parent">
-              <a href="img/image (1).jpg" data-toggle="lightbox"><img src="img/image (1).jpg" class="img-thumbnail"></a>
-              <a href="img/image (2).jpg" data-toggle="lightbox"><img src="img/image (2).jpg" class="img-thumbnail"></a>
-              <a href="img/image (3).jpg" data-toggle="lightbox"><img src="img/image (3).jpg" class="img-thumbnail"></a>
-              <a href="img/image (4).jpg" data-toggle="lightbox"><img src="img/image (4).jpg" class="img-thumbnail"></a>
-              <a href="img/image (5).jpg" data-toggle="lightbox"><img src="img/image (5).jpg" class="img-thumbnail"></a>
-              <a href="img/image (6).jpg" data-toggle="lightbox"><img src="img/image (6).jpg" class="img-thumbnail"></a>
-              <li><a href="img/image (1).jpg" data-gallery="mygallery" data-title="Image 2" data-footer="This is page 1" data-toggle="lightbox"><img src="img/image (1).jpg" class="img-thumbnail"></a></li>
-
+              <a href="img/image (1).jpg" data-toggle="lightbox" data-title="Image One" data-footer="This is Image One" data-gallery="mygallery" data-parent=".gallery-parent" data-hover="tooltip" data-placement="bottom" title="This is a photo One"><img src="img/image (1).jpg" class="img-thumbnail"></a>
+              <a href="img/image (2).jpg" data-toggle="lightbox" data-title="Image Two" data-footer="This is Image Two"  data-gallery="mygallery" data-parent=".gallery-parent" data-hover="tooltip" data-placement="bottom" title="This is a photo Two"><img src="img/image (2).jpg " class="img-thumbnail"></a>
+              <a href="img/image (3).jpg" data-toggle="lightbox" data-title="Image Three" data-footer="This is Image Three" data-gallery="mygallery" data-parent=".gallery-parent" data-hover="tooltip" data-placement="bottom" title="This is a photo Three"><img src="img/image (3).jpg" class="img-thumbnail"></a>
+              <a href="img/image (4).jpg" data-toggle="lightbox" data-title="Image Four" data-footer="This is Image Four" data-gallery="mygallery" data-parent=".gallery-parent" data-hover="tooltip" data-placement="bottom" title="This is a photo Four"><img src="img/image (4).jpg" class="img-thumbnail"></a>
+              <a href="img/image (5).jpg" data-toggle="lightbox" data-title="Image Five" data-footer="This is Image Five" data-gallery="mygallery" data-parent=".gallery-parent" data-hover="tooltip" data-placement="bottom" title="This is a photo Five"><img src="img/image (5).jpg" class="img-thumbnail"></a>
+              <a href="img/image (6).jpg" data-toggle="lightbox" data-title="Image Six" data-footer="This is Image Six" data-gallery="mygallery" data-parent=".gallery-parent" data-hover="tooltip" data-placement="bottom" title="This is a photo Six"><img src="img/image (6).jpg" class="img-thumbnail"></a>
             </div>
             
           </div>
