--- a/alpha_cms/categories.html
+++ b/alpha_cms/categories.html
@@ -40,9 +40,9 @@
                             <li class="active"><a href="categories.html">Categories</a></li>
                             <li><a href="users.html">Users</a></li>
                         </ul>
-                        <form class="navbar-form navbar-left search-form" role="search">
+                        <form class="navbar-form navbar-left " role="search">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Search">
+                                <input type="text" class="form-control search-form" placeholder="Search">
                             </div>
                             
                         </form>
@@ -173,6 +173,7 @@
             ); 
       
         </script>
+        <script src="js/f.js"></script>
     </body>
     <footer class="text-center">
         Copyright &copy; 3 - 2018 , All Right Reversed. 
