--- a/alpha_cms/users.html
+++ b/alpha_cms/users.html
@@ -41,9 +41,9 @@
                             <li><a href="categories.html">Categories</a></li>
                             <li class="active"><a href="users.html">Users</a></li>
                         </ul>
-                        <form class="navbar-form navbar-left search-form" role="search">
+                        <form class="navbar-form navbar-left" role="search">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Search">
+                                <input type="text" class="form-control search-form" placeholder="Search">
                             </div>
                             
                         </form>
@@ -174,7 +174,18 @@
                 } 
             );     
         </script>
-    </body>
+        <!-- <script>
+            var $rows = $('table tr');
+            $('.search-form').keyup(function(){
+                var val = $.trim($(this).val()).replace(/ +/g, ' ').toLowerCase();
+                $rows.show().filter(function(){
+                    var text = $(this).text().replace(/\s+/g, ' ').toLowerCase();
+                    return !~text.indexOf(val);
+                }).hide();
+            });
+        </script> -->
+        <script src="js/f.js"></script>
+    </body >
 
     <footer class="text-center">
         Copyright &copy; 3 - 2018 , All Right Reversed. 
