19/03/2018 : complete ecommerce web

--- a/edx_hosting/index.html
+++ b/edx_hosting/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+
   <!-- Navbar -->
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container nav-container">
@@ -244,13 +245,12 @@
             <ul>
               <li>1 Free Domain</li>
               <li>10 GB Dung lượng đĩa</li>
-              <li>100 GB Băng Thông</li>
+              <li>100 GB Băng Thông, Panel Mạnh Mẽ</li>
               <li>1 MySQL Database</li>
               <li>1 FTP User</li>
               <li>1 Email Account</li>
               <li>Easy Website builder</li>
               <li>Control Panel Mạnh Mẽ</li>
-              <li>Quản lý truy cập thân thiện</li>
             </ul>
           </div>
           <div class="row-btn col-md-12">
@@ -320,6 +320,18 @@
       </div>
     </div>
   </section>
+  
+	<footer style="background-color: #283D51;color: white;">
+		<div class="container" style="margin-left: 15px;">
+			<p>
+				<a href="#">Back to top</a>
+			</p>
+			<p>EDX Hosting &copy; 2015. &middot;
+				<a href="">Priacy</a> &middot;
+				<a href="">Terms</a>
+			</p>
+		</div>
+	</footer>
   <!-- Bootstrap core JavaScript
     ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
