--- a/business_theme/about.html
+++ b/business_theme/about.html
@@ -70,6 +70,96 @@
       </div>
     </section>
     
+    <section class="contact-people"> 
+      <h1 class="text-uppercase">meet our team</h1>
+      <hr>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="div-img img-thumbnail  img-circle">
+            <img src="img/Johs.jpg" class="">
+          </div>
+          <h1 class="text-uppercase">smith Johns <span class="text-uppercase text-50-gray">developer</span></h1>
+          <p>Duis nulla quam, posuere id nisl eu, congue consectetur dolor. In eu sapien id diam interdum aliquet eu nec est. Nam lacinia elit sit amet felis convallis vulputate. Vivamus posuere semper felis, at imperdiet risus feugiat vel.</p>
+          <ul class="list-inline list-social-icon">
+            <li><a href="" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+            <li><a href="" data-toggle="tooltip" data-placement="top" title="Intagram"><i class="fab fa-instagram fa-2x"></i></a></li>
+            <li><a href="" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+            <li><a href="" data-toggle="tooltip" data-placement="top" title="Google+"><i class="fab fa-google-plus-square fa-2x"></i></a></li>
+          </ul>
+        </div>
+
+        <div class="col-md-4">
+          <div class="div-img img-thumbnail  img-circle">
+              <img src="img/Mary.jpg" class="">
+            </div>
+          <h1 class="text-uppercase">mary quiries <span class="text-uppercase text-50-gray">developer</span></h1>
+          <p>Duis nulla quam, posuere id nisl eu, congue consectetur dolor. In eu sapien id diam interdum aliquet eu nec est. Nam lacinia elit sit amet felis convallis vulputate. Vivamus posuere semper felis, at imperdiet risus feugiat vel.</p>
+          <ul class="list-inline list-social-icon">
+            <li><a href="" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+            <li><a href="" data-toggle="tooltip" data-placement="top" title="Intagram"><i class="fab fa-instagram fa-2x"></i></a></li>
+            <li><a href="" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+            <li><a href="" data-toggle="tooltip" data-placement="top" title="Google+"><i class="fab fa-google-plus-square fa-2x"></i></a></li>
+          </ul>
+        </div>
+
+        <div class="col-md-4">
+          <div class="div-img img-thumbnail  img-circle">
+            <img src="img/Donald-Trump.jpg" class="">
+          </div>
+          <h1 class="text-uppercase">Donald Trump <span class="text-uppercase text-50-gray">developer</span></h1>
+          <p>Duis nulla quam, posuere id nisl eu, congue consectetur dolor. In eu sapien id diam interdum aliquet eu nec est. Nam lacinia elit sit amet felis convallis vulputate. Vivamus posuere semper felis, at imperdiet risus feugiat vel.</p>
+          <ul class="list-inline list-social-icon">
+            <li><a href="" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+            <li><a href="" data-toggle="tooltip" data-placement="top" title="Intagram"><i class="fab fa-instagram fa-2x"></i></a></li>
+            <li><a href="" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+            <li><a href="" data-toggle="tooltip" data-placement="top" title="Google+"><i class="fab fa-google-plus-square fa-2x"></i></a></li>
+          </ul>
+        </div>
+
+        <div class="col-md-4">
+            <div class="div-img img-thumbnail  img-circle">
+              <img src="img/chuck.jpg" class="">
+            </div>
+            <h1 class="text-uppercase">Chuck aliga <span class="text-uppercase text-50-gray">disigner</span></h1>
+            <p>Duis nulla quam, posuere id nisl eu, congue consectetur dolor. In eu sapien id diam interdum aliquet eu nec est. Nam lacinia elit sit amet felis convallis vulputate. Vivamus posuere semper felis, at imperdiet risus feugiat vel.</p>
+            <ul class="list-inline list-social-icon">
+              <li><a href="" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+              <li><a href="" data-toggle="tooltip" data-placement="top" title="Intagram"><i class="fab fa-instagram fa-2x"></i></a></li>
+              <li><a href="" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+              <li><a href="" data-toggle="tooltip" data-placement="top" title="Google+"><i class="fab fa-google-plus-square fa-2x"></i></a></li>
+            </ul>
+          </div>
+  
+          <div class="col-md-4">
+            <div class="div-img img-thumbnail  img-circle">
+              <img src="img/anna.jpg" class="">
+            </div>
+            <h1 class="text-uppercase">anna lora <span class="text-uppercase text-50-gray">developer</span></h1>
+            <p>Duis nulla quam, posuere id nisl eu, congue consectetur dolor. In eu sapien id diam interdum aliquet eu nec est. Nam lacinia elit sit amet felis convallis vulputate. Vivamus posuere semper felis, at imperdiet risus feugiat vel.</p>
+            <ul class="list-inline list-social-icon">
+              <li><a href="" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+              <li><a href="" data-toggle="tooltip" data-placement="top" title="Intagram"><i class="fab fa-instagram fa-2x"></i></a></li>
+              <li><a href="" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+              <li><a href="" data-toggle="tooltip" data-placement="top" title="Google+"><i class="fab fa-google-plus-square fa-2x"></i></a></li>
+            </ul>
+          </div>
+  
+          <div class="col-md-4">
+            <div class="div-img img-thumbnail  img-circle">
+              <img src="img/Sarah.jpg" class="">
+            </div>
+            <h1 class="text-uppercase">Sarah Lie <span class="text-uppercase text-50-gray">disigner</span></h1>
+            <p>Duis nulla quam, posuere id nisl eu, congue consectetur dolor. In eu sapien id diam interdum aliquet eu nec est. Nam lacinia elit sit amet felis convallis vulputate. Vivamus posuere semper felis, at imperdiet risus feugiat vel.</p>
+            <ul class="list-inline list-social-icon">
+              <li><a href="" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+              <li><a href="" data-toggle="tooltip" data-placement="top" title="Intagram"><i class="fab fa-instagram fa-2x"></i></a></li>
+              <li><a href="" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+              <li><a href="" data-toggle="tooltip" data-placement="top" title="Google+"><i class="fab fa-google-plus-square fa-2x"></i></a></li>
+            </ul>
+          </div>
+      </div>
+    </section>
+
     <footer>
       <p>Business Theme Copyright &copy; 3 - 2018 by Nguyễn Đức Long</p>
     </footer>
