--- a/business_theme/index.html
+++ b/business_theme/index.html
@@ -118,7 +118,8 @@
           <div class="col-md-6 feauture-text">
             <h1>modern business feauture include:</h1>
             <ul>
-              <li><i class="glyphicon glyphicon-ok"></i> Boostrap 3 Framework</li>
+              <li><i class="glyphicon glyphicon-ok"></i> Boos
+                trap 3 Framework</li>
               <li><i class="glyphicon glyphicon-ok"></i> Mobile Reponsive Design</li>
               <li><i class="glyphicon glyphicon-ok"></i> Minimal custom CSS Styles</li>
               <li><i class="glyphicon glyphicon-ok"></i> Unstyled: Add Your Own Style and Content!</li>
@@ -155,6 +156,7 @@
       </div>
     </section>
 
+    
     <footer>
       <p>Business Theme Copyright &copy; 3 - 2018 by Nguyễn Đức Long</p>
     </footer>
